projects/compiler/test/typechecker/try/error_bad_location.1.out
Error at %FILE_NAME%:1:9
Invalid location for try expression
  |  val x = try 123
             ^
Try expressions can only be used inside of function bodies
