projects/compiler/test/typechecker/try/error_bad_location.1.abra
val x = try 123